--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,10 +18,16 @@ jobs:
         with:
           node-version: '18'
 
+      - name: Clean workspace
+        run: |
+          rm -rf node_modules package-lock.json
+
       - name: Install dependencies
         run: npm install
 
       - name: Build the app
+        env:
+          ROLLUP_DISABLE_NATIVE: 1
         run: npm run build
 
       - name: Deploy to GitHub Pages
