--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "axios": "^1.7.9",
     "font-awesome": "^4.7.0",
     "gh-pages": "^6.3.0",
-    "js-cookie": "^3.0.5",
     "process": "^0.11.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -22,6 +21,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/ui": "^3.1.4",
     "jsdom": "^26.1.0",
     "rimraf": "^6.0.1",
     "vite": "^6.2.1",
