--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "vite-plugin-remove-console": "^2.2.0",
     "vitest": "^3.1.2"
   },
-  "homepage": "https://elizbeh.github.io",
+  "homepage": "https://elizbeh.github.io/savorly-frontend",
   "scripts": {
     "dev": "vite",
     "clean": "rimraf dist",
